@@ -7,6 +7,8 @@ partman-partitioning (48) UNRELEASED; urgency=low
     be removed and re-added just after committing partition table changes.
   * Use tune2fs/resize2fs to handle ext2/ext3 resizing, since libparted
     can't deal with the resize_inode feature.
+  * Add a progress bar for NTFS resizing, even though it's never advanced at
+    the moment.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 14 Mar 2007 22:16:23 +0000
 
